argocd-apps/home/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-page
  labels:
    app: home-page
spec:
  selector:
    app: home-page
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
