argocd-apps/home/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-page
  namespace: home
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - k8s.karamjitbrar.com
      secretName: k8s-tls
  rules:
    - host: k8s.karamjitbrar.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: home-page
                port:
                  number: 80
